--- a/AppMinisterialService/Views/AboutPage.xaml
+++ b/AppMinisterialService/Views/AboutPage.xaml
@@ -22,8 +22,8 @@
         </Grid.RowDefinitions>
         <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,30,0,45" VerticalOptions="FillAndExpand">
-                    <Image Source="iglesia.jpg" VerticalOptions="Center" HeightRequest="64" />
+                <ContentView Padding="0,20,0,35" VerticalOptions="FillAndExpand">
+                    <Image Source="logo.jpg" VerticalOptions="Center" HeightRequest="90" />
                 </ContentView>
             </StackLayout>
         </StackLayout>
